--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
     <div id="wrapper">
       <div class="blocks">
         <div class="terminal latest">
-          <p>LATEST</p>
+          <p><a href="/blocks">LATEST</a></p>
           <p class="arrow">↧</p>
         </div>
         {%- for blk in blks %}
