Add background color to blocks

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         border-radius: 15px;
         text-align: center;
         margin: 5px auto 33px auto;
+        background: #dedede;
       }
       div.terminal {
         border: 3px dotted #999;
